# OpenCV-Algorithm-WOR

./: CMakeLists.txt  README.md  batch.txt
src/: ImageProcessing.cpp  ImageProcessing.hpp  ShapeDetection.cpp  ShapeDetection.hpp  main.cpp
